# mag7-predictor

./: .dockerignore  .gitignore  Dockerfile  helpers.py  main.py  pyproject.toml
.github/workflows/: publish.yaml
argocd/: application.yaml
mag7-chart/: Chart.yaml  values.yaml
mag7-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
mag7-chart/templates/tests/: test-connection.yaml
model/: model.py  pyproject.toml  settings.py
